# ChangeLog for dev-ruby/ruby-gtk3
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk3/ChangeLog,v 1.3 2014/01/15 20:07:43 naota Exp $

*ruby-gtk3-2.1.0 (15 Jan 2014)

  15 Jan 2014; Naohiro Aota <naota@gentoo.org> +ruby-gtk3-2.1.0.ebuild:
  version bump

*ruby-gtk3-2.0.2 (05 Dec 2013)

  05 Dec 2013; Naohiro Aota <naota@gentoo.org> +ruby-gtk3-2.0.2.ebuild:
  version bump

*ruby-gtk3-1.2.6 (04 May 2013)

  04 May 2013; Naohiro Aota <naota@gentoo.org> +metadata.xml,
  +ruby-gtk3-1.2.6.ebuild:
  New package dev-ruby/ruby-gtk3 required for new ruby-gnome2 version.