@@ -4,25 +4,27 @@ Hash: SHA256
 DIST ruby-gnome2-all-1.2.6.tar.gz 1718802 SHA256 b9e0093e82d53aead93ba1cd261faf03ccede873ee0e7ffd35090ce1c604be66 SHA512 b2e123ece31b89dc1d37040297d726b625d71579bbf60cb84c89b63f0fb9bf097d5f0675a16dfc7aecd8161913c737b22c057cc872dd454f341440c76901c07d WHIRLPOOL 2e4f47014b93838a9c31267fcca86458127ab9bc02b241a6bd0c3f14df8af7a25f6166d294577eb674f59c1e1d042208e5b448c83429011651dc6af0e9383b9a
 DIST ruby-gnome2-all-2.0.2.tar.gz 1674872 SHA256 12656b268206d2d1fc99da4f7163910844efc38117380180f37bfdac249310b9 SHA512 c739a565b14e31905a30e8ebf7cfd6abcf576bb45f3f0eaedba3937fda7818864825d95de5d1c229af5dc09c769d56e788a366cdbf74b625804fb844fd818d6f WHIRLPOOL 662eadbedc9b9e99de1cc6e3556f7bec6063c58c57f4d2ab0b51bbf98eeca9f5955910442a58ff3a7649f3e049f0d0573d83e7a503c0ca58bac3a265f50e121b
 DIST ruby-gnome2-all-2.1.0.tar.gz 1754946 SHA256 f59d2aa81351fc48ac4948279d7d39e241b8118eb80f0f733f6834d6ccace088 SHA512 b76f2198644ecceac59071cbb5afddbd3bd7ad641a17ec04ea994b10cc48fcc7e27dd651b19a905f761faf041ff8f2353174dd073a1a146693dc23218f8fab40 WHIRLPOOL 202fde8bfc84f156681005b9bc317fb7736f2766264d3ef8109f1720fc02d18258efe4c60d9cdd2b8463e69f21df094177d31eda3a87dfb9c7bb0ca6873a4fb3
+DIST ruby-gnome2-all-2.2.0.tar.gz 1736638 SHA256 73b2366152a15533d8e7056b30c76db6d5bdc6e5a1dc9c72320cbef91ff63c83 SHA512 71a263b9623b3d098aafcd63abc49af2ece19f4da45a4b2e3a698fb90c8302f61f1681d21c1bf2f823852afb06890470c5f6be1d4e4593b86487fd980ca460f5 WHIRLPOOL 0ece27bcd275b9a73cb1682dd268571e2ad7c35da0ddea0c715e0b215eb9bc5831ed879b70327ef5586deb4820c2caab7f0589acdc53e1f4b3f35f1ef7f8737c
 EBUILD ruby-gtk3-1.2.6.ebuild 617 SHA256 e854d23f1b03b165481b56d9c324a2ee66f475957e156090832ae9e3b815b5f1 SHA512 115489b6f81a384175b50400854341d091ba6ad805687522302003382fdab3b9252ed4805a1092240c43973580be4b3e769e55002bcdf7fad5bd726acd16cb45 WHIRLPOOL 8f1261247f04ba8b3818fe836a784666d8fee3321dd70b0c49f1ab4c4fcc249621460674f297a1dfab073ed255a24e21cdb0febbed77a2015f95c574c16768c0
 EBUILD ruby-gtk3-2.0.2.ebuild 624 SHA256 289b62a68ae5a52e7f462fde8196f16b741102e2f3748711e656e76b88d785cb SHA512 715a688a859383fa435461c7de20912e3b48810f5d2d41232f56cbe9e014230181912f54332c6e75780ecfc762d1199cc8b10cfb8f58e0b890eb5a4a3cb74eeb WHIRLPOOL 98eef5c26cb1ad1ec5092e8d27f86b10595fc8d3c0883d73e3bc9c4ec8c0be46d656ad5f17118d4c006e4845e5b6ddbaad4aac8cea3e665bc34a35ce6c71d048
 EBUILD ruby-gtk3-2.1.0.ebuild 624 SHA256 954666ce9b7baf1ebf81218d978f859dcc6fb2cdb7259cdeb39afc7f1656cf92 SHA512 0c782d6fcc07a8a065e8420a3c454f6a204f867929a33f91509dfe6c51e26ddb5c0d7f577bd01c2b4fe978ca3ce590bf93571aaffebb065561b149ce312a5da1 WHIRLPOOL 6fa2290dde49ffc90eaa747caabed907fd7f69a61341ed511dbc382d662fecfa591e4557edc0b7f5720e8bd5bfebfe16a944bc50e43089d6bdae7281e2bdc5e9
-MISC ChangeLog 640 SHA256 f32e670adb042c3e1c9004d11fcac816163faddaa4c4e9e1271a0146ac139110 SHA512 5b771fccfcc21e5d2d8b743986e0a66db7df59f408673048eb0df326daf5fc8ecc3c622ea096c09e3d58b82e01595420eae355deefaf1daedbe2e5a38f36d42f WHIRLPOOL 247e090db2a7743dd140e53b7c89c94ee837ffc2d194c8c6ec8ee2bd5c7ba817ea41ca21be7579ede3860f5920f6141637c5d7cea248550dfaad8a271d0f741a
+EBUILD ruby-gtk3-2.2.0.ebuild 624 SHA256 7cdf6db5df53fce754c4fb44a99f6ec033aafc67665ca8568171a614ee454ddc SHA512 cf51a4976f055b4822483ca9829206735edb6f3a99da411a6ac4e4a83a9be63af87e801057d31f05ad33270c42ad86458ab333822ef137efc49b21d1c181f3d1 WHIRLPOOL 572b554c6420078c00d71889655cd04889c9268cfb77bfa3df093e1b54257e242fd30097b48d2ba7c79e8de701d75406ef00a19a296f73bc6ad33b56b23af1e5
+MISC ChangeLog 760 SHA256 c7d2334ec92330ddf9e0e634adcf662d4b6b11bdc2b9d337a3091e0367fd261b SHA512 98900c072044f44c22d57e9159348e306515309e3132addfe476b13cd31bc60294a9f78b90dce5466d3d5203efa736500d3e00b3552b3ef00c439551087a0023 WHIRLPOOL f8dba275ae909f7e12a1c5174383bd48eee856f042aaf054e4a0ae3599bbf59a08ed4059f169bef00f3a99bb6bafda057868db564663b33951a201e2eb88b0f7
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS1uqQAAoJEDYO1FT4VRUUs9YP+gNuqA+5++vu3cS79pqjB3+C
-UtSg9+EPVENSWBi5w2GX/pf0UnFxuccTPhbmOhktbLS/N8qQKUoE1etT30WGkZz5
-e/buHjrYDcJv1svXhDf6NRGjqOjFn0U7advJEPXu6LRLxModSFKwfRqE4uqzqD1F
-9u/MXGV2vA7sFmv8UqS3ybDcXiJW1/PDmK9sDNcb/tFypwiOLYIb0+JdPlefLqim
-AH9pcxbtIQqTr/uspt0Hsi5Vd1Z+aXPNNfF9MVvOHE5/YBgnRjvr4nDrTPIicWCg
-rbe8iRdC6n8EGIZtIMGNIkHFp5jck2QrIJ+mdEpa1s4eE9HofYLfPEFflyq/oi8X
-bwwKO1Cw8PpiH5oz1Q7LcvkGRmYHipe4Bj4iQKEUIsS+q0pnZMCZ1bM4TSqmQ/XR
-pfPBhdjwLhvENdjlp+F6B3eOw8rpxt044qnFnMozmkPQ53XGFH/Juz7aweCOaY97
-BLR4dIY9Iz55rAZ7PEmunTxBOOZ7bm/UQlXdC66Rvfj5N0DtBqfbn/Lvu02FSLnD
-K/kmhGw0hB7B97FFWF79h/RHKOVZZnMFYTUSipq33YmkvvepLcxLZFqzDc+IEju3
-MBQHrBCdNARVnpVAo6YKBQWXJRgX2cAidweH9XwvolruZQlFoKl92g9Sx0M8B3bZ
-PvtVf8MCJIBwVHeK26Uq
-=jGQV
+iQIcBAEBCAAGBQJTJlf3AAoJEDYO1FT4VRUUCKgP/0JyL4nSND/eDrS+gKAIK8YY
+8vYa+HzJ0EAlVXFOhRYOMQL72CKfxISS/mVyN9hi1BGMC+SBaKcRw5r1lmnPRUdz
+JY4P0RhtvUrV/9a6iOBbtk1Ukx2uuSJQ9Tlsvx/bQRvkCWqdSZMjjPM6QJY/cGMf
+3abb/6sxubZ62UkSCV5ZaQOnpf6Vh3M4liBiTX3YI5HJ/XQFpIWnxocwnzDz1jUS
+H/lY4Y2VnICce06DdoW1lKdBGP4uFUP0vL6n/qJeEKIhg145LmKTMpjh2Wb40EH8
+87Q0ga7pwoNWFDKuAAngKJRKv6uH1tSbGOOXr31BLC862X6J3Tw8/jQNlcNwUXD8
+d7bTxLf6PQVGVsWJbWFBQ07hZAGinavz0pXVUJJofNawHAvo8ectPM9iAeXrZH4l
+45w2u2DUhImXO1kE4LLzC8yKFVmVwuoHkgSpxHWxndRjDHxxdNYnQICJ+ngV6A4F
+95juBDcLARX54l7X0cLN+YTl+uJnghkYQzgV4xE1GlUvYGs3T6PqAMaryRY7TD+B
+9AlDv0jWg1OSMbhi4es+dtnZlRZOfGbZHPIIy7hYr0/cb9LqSLbDWYeHbJUTIrPU
+7jT7rVD//dYU4zusioCRVLo0zMWTT401iKgQlBj/KU2K485oZNuwJ7yNtE49/QgQ
+oPfL7OGhbMEBg+i/jguP
+=DMnw
 -----END PGP SIGNATURE-----
