@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=x11-libs/gtk+:3 ruby_targets_ruby19? ( >=dev-ruby/ruby-glib2-2.2.0[ruby_targets_ruby19] >=dev-ruby/ruby-pango-2.2.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/ruby-glib2-2.2.0[ruby_targets_ruby20] >=dev-ruby/ruby-pango-2.2.0[ruby_targets_ruby20] ) test? ( ruby_targets_ruby19? ( >=dev-ruby/ruby-gdkpixbuf2-2.2.0[ruby_targets_ruby19] >=dev-ruby/ruby-atk-2.2.0[ruby_targets_ruby19] >=dev-ruby/ruby-gdk3-2.2.0[ruby_targets_ruby19] >=dev-ruby/ruby-gio2-2.2.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/ruby-gdkpixbuf2-2.2.0[ruby_targets_ruby20] >=dev-ruby/ruby-atk-2.2.0[ruby_targets_ruby20] >=dev-ruby/ruby-gdk3-2.2.0[ruby_targets_ruby20] >=dev-ruby/ruby-gio2-2.2.0[ruby_targets_ruby20] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ) virtual/pkgconfig ruby_targets_ruby19? ( dev-ruby/pkg-config[ruby_targets_ruby19] ) ruby_targets_ruby20? ( dev-ruby/pkg-config[ruby_targets_ruby20] )
+DESCRIPTION=Ruby Gtk3 bindings
+EAPI=5
+HOMEPAGE=http://ruby-gnome2.sourceforge.jp/
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 test
+KEYWORDS=~amd64
+LICENSE=Ruby
+RDEPEND=x11-libs/gtk+:3 ruby_targets_ruby19? ( >=dev-ruby/ruby-gdkpixbuf2-2.2.0[ruby_targets_ruby19] >=dev-ruby/ruby-atk-2.2.0[ruby_targets_ruby19] >=dev-ruby/ruby-gdk3-2.2.0[ruby_targets_ruby19] >=dev-ruby/ruby-gio2-2.2.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/ruby-gdkpixbuf2-2.2.0[ruby_targets_ruby20] >=dev-ruby/ruby-atk-2.2.0[ruby_targets_ruby20] >=dev-ruby/ruby-gdk3-2.2.0[ruby_targets_ruby20] >=dev-ruby/ruby-gio2-2.2.0[ruby_targets_ruby20] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 )
+SLOT=0
+SRC_URI=mirror://sourceforge/ruby-gnome2/ruby-gnome2-all-2.2.0.tar.gz
+_eclasses_=eutils	af81d52c25ec93fbdff71e0efb0de7b7	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	multilib	fac675dcccf94392371a6abee62d909f	ruby-fakegem	4021487250c740e3dc16b181228db818	ruby-ng	14f0490e24cbad7c17cece628b3d111e	ruby-ng-gnome2	e4cff284a3481220aed757f422ae56c7	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=48d97ba45257c64bc36db20378bcd789
