@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/ruby-gtk3
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk3/ChangeLog,v 1.3 2014/01/15 20:07:43 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gtk3/ChangeLog,v 1.4 2014/03/17 02:03:27 naota Exp $
+
+*ruby-gtk3-2.2.0 (15 Mar 2014)
+
+  15 Mar 2014; Naohiro Aota <naota@gentoo.org> +ruby-gtk3-2.2.0.ebuild:
+  version bump
 
 *ruby-gtk3-2.1.0 (15 Jan 2014)
 
